src/objects/c2g__AccountTypeSettings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This custom setting allows users to specify default Accounts Receivable Control, Accounts Payable Control and Default Expense Account for Account.</description>
    <fields>
        <fullName>c2g__DefaultAPControl__c</fullName>
        <label>Default AP Control</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__DefaultARControl__c</fullName>
        <label>Default AR Control</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__DefaultExpenseControl__c</fullName>
        <label>Default Expense Control</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <label>Account Type Settings (FF)</label>
</CustomObject>